--- a/live.html
+++ b/live.html
@@ -2,17 +2,15 @@
 <head>
     <meta charset="utf-8">
     <title>MP5直播端Bracket页面</title>
-<style>
-body{
-    background-color: #F3F5F7;
-}
-</style>
+<script type="text/javascript">
+url='https://mp5tournament.github.io/live-group'
+window.location.href = url
+</script>
 </head>
 <body>
-    <div class="body">aaa
-    </div>
+</div>跳转中……</div>
 <script type="text/javascript">
-    console.log('aaa')
+window.location.href = url
 </script>
 </body>
 </html>
