--- a/live-nockout.html
+++ b/live-nockout.html
@@ -1,10 +1,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>MP5直播端Bracket页面 - 小组赛</title>
+    <title>MP5直播端Bracket页面 - 淘汰赛</title>
 <style>
 body{
-    background-color: #F3F5F7;
+    background-color: white;
     margin:0;
     display: flex;
     position: relative;
@@ -13,8 +13,8 @@ body{
 iframe{
     border: none;
     position: fixed;
-    top:-15px;
-    left:257px;
+    top:58px;
+    left:131px;
     width: 1920px;
     height: 1080px;
     overflow: hidden;
@@ -29,15 +29,15 @@ iframe{
 }
 .transparent{
     position: fixed;
-    background-color: #F3F5F7;
+    background-color: white;
     z-index: 1;
 }
 .transparent-t, .transparent-b{
     width: 1920px;
-    height: 210px;
+    height: 291px;
 }
 .transparent-r, .transparent-l{
-    width: 327px;
+    width: 203px;
     height: 1080px;
 }
 </style>
@@ -48,7 +48,7 @@ iframe{
         <div class="transparent transparent-b" style="bottom:0;right:0;"></div>
         <div class="transparent transparent-l" style="top:0;left:0;"></div>
         <div class="transparent transparent-r" style="bottom:0;right:0;"></div>
-        <iframe src="https://docs.qq.com/sheet/DQ2ViTHFQYUR3TmtH?tab=cgbqhx"></iframe>
+        <iframe src="https://docs.qq.com/sheet/DQ2ViTHFQYUR3TmtH?tab=5x2po3"></iframe>
     </div>
 <script type="text/javascript">
     console.log('aaa')
