--- a/live.html
+++ b/live.html
@@ -3,7 +3,16 @@
     <meta charset="utf-8">
     <title>MP5直播端Bracket页面</title>
 <script type="text/javascript">
-url='https://mp5tournament.github.io/live-group'
+n=1
+url=[
+'https://mp5tournament.github.io/live-nockout',   // 0：淘汰赛（4+4）
+'https://mp5tournament.github.io/live-group',     // 1：小组赛（10）
+'https://mp5tournament.github.io/live-swiss8',    // 2：瑞士轮（8）
+'https://mp5tournament.github.io/live-swiss12',   // 3：瑞士轮（12）
+'https://mp5tournament.github.io/live-swiss14',   // 4：瑞士轮（14）
+'https://mp5tournament.github.io/live-swiss16',   // 5：瑞士轮（16）
+'https://mp5tournament.github.io/live-nockout16', // 6：淘汰赛（16）
+]
 window.location.href = url
 </script>
 </head>
