--- a/live.html
+++ b/live.html
@@ -5,13 +5,13 @@
 <script type="text/javascript">
 n=1
 window.location.href =[
-'https://mp5tournament.github.io/live-nockout',   // 0：淘汰赛（4+4）
+'https://mp5tournament.github.io/live-knockout',   // 0：淘汰赛（4+4）
 'https://mp5tournament.github.io/live-group',     // 1：小组赛（10）
 'https://mp5tournament.github.io/live-swiss8',    // 2：瑞士轮（8）
 'https://mp5tournament.github.io/live-swiss12',   // 3：瑞士轮（12）
 'https://mp5tournament.github.io/live-swiss14',   // 4：瑞士轮（14）
 'https://mp5tournament.github.io/live-swiss16',   // 5：瑞士轮（16）
-'https://mp5tournament.github.io/live-nockout16', // 6：淘汰赛（16）
+'https://mp5tournament.github.io/live-knockout16', // 6：淘汰赛（16）
 ][n]
 window.location.href = url
 </script>
