--- a/live.html
+++ b/live.html
@@ -3,20 +3,92 @@
     <meta charset="utf-8">
     <title>MP5直播端Bracket页面</title>
 <script type="text/javascript">
+url='https://docs.qq.com/sheet/DQ2ViTHFQYUR3TmtH?tab=cgbqhx'
 n=1
-window.location.href =[
-'https://mp5tournament.github.io/live-knockout',   // 0：淘汰赛（4+4）
-'https://mp5tournament.github.io/live-group',     // 1：小组赛（10）
-'https://mp5tournament.github.io/live-swiss8',    // 2：瑞士轮（8）
-'https://mp5tournament.github.io/live-swiss12',   // 3：瑞士轮（12）
-'https://mp5tournament.github.io/live-swiss14',   // 4：瑞士轮（14）
-'https://mp5tournament.github.io/live-swiss16',   // 5：瑞士轮（16）
-'https://mp5tournament.github.io/live-knockout16', // 6：淘汰赛（16）
+stage =[
+'knockout',   // 0：淘汰赛（4+4）
+'group',      // 1：小组赛（10）
+'swiss8',     // 2：瑞士轮（8）
+'swiss12',    // 3：瑞士轮（12）
+'swiss14',    // 4：瑞士轮（14）
+'swiss16',    // 5：瑞士轮（16）
+'knockout16', // 6：淘汰赛（16）
 ][n]
-window.location.href = url
 </script>
+<style>
+/* 小组赛（10） */
+.group body, .group .transparent{
+    background-color: #F3F5F7;
+}
+.group .transparent-t, .group .transparent-b{
+    height: 210px;
+}
+.group .transparent-r, .group .transparent-l{
+    width: 327px;
+}
+.group iframe{
+    top:-15px;
+    left:257px;
+}
+/* 淘汰赛（4+4） */
+.knockout body, .knockout .transparent{
+    background-color: white;
+}
+.knockout .transparent-t, .knockout .transparent-b{
+    height: 291px;
+}
+.knockout .transparent-r, .knockout .transparent-l{
+    width: 203px;
+}
+.knockout iframe{
+    top:58px;
+    left:131px;
+}
+/* 通用 */
+body{
+    margin:0;
+    display: flex;
+    position: relative;
+    overflow: hidden;
+}
+iframe{
+    border: none;
+    position: fixed;
+    width: 1920px;
+    height: 1080px;
+    overflow: hidden;
+}
+.body{
+    width: 1920px;
+    height: 1080px;
+    overflow: hidden;
+}
+.bracket{
+    display: none;
+}
+.transparent{
+    position: fixed;
+    z-index: 1;
+}
+.transparent-t, .transparent-b{
+    width: 1920px;
+}
+.transparent-r, .transparent-l{
+    height: 1080px;
+}
+</style>
 </head>
 <body>
-</div>跳转中……</div>
+    <div class="body">
+        <div class="transparent transparent-t" style="top:0;left:0;"></div>
+        <div class="transparent transparent-b" style="bottom:0;right:0;"></div>
+        <div class="transparent transparent-l" style="top:0;left:0;"></div>
+        <div class="transparent transparent-r" style="bottom:0;right:0;"></div>
+        <iframe></iframe>
+    </div>
+<script type="text/javascript">
+document.getElementsByTagName('iframe')[0].src=url
+document.getElementsByTagName('body')[0].classList.add(stage)
+</script>
 </body>
 </html>
