--- a/live.html
+++ b/live.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <title>MP5直播端Bracket页面</title>
 <script type="text/javascript">
-url='https://docs.qq.com/sheet/DQ2ViTHFQYUR3TmtH?tab=cgbqhx'
-n=1
+url='https://docs.qq.com/sheet/DQ2ViTHFQYUR3TmtH?tab=5x2po3'
+n=0
 stage =[
 'knockout',   // 0：淘汰赛（4+4）
 'group',      // 1：小组赛（10）
