--- a/live_poster/sponsor.html
+++ b/live_poster/sponsor.html
@@ -226,7 +226,7 @@ wyrio	8984146	16.11
                 </div>
                 <div class="logo-container">
                     <!-- 这里将显示MP5 logo -->
-                    <img src="https://mp5tournament.github.io/logo.png" alt="MP5 Logo" class="logo">
+                    <img src="https://mp5tournament.github.io/logo.png" alt="" class="logo">
                 </div>
             </div>
         </div>
