--- a/live_poster/qqgroup.html
+++ b/live_poster/qqgroup.html
@@ -3,29 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>感谢赞助MP5</title>
-
-<!-- 配置部分 -->
-<script type="text/javascript">
-// 配置数据
-const Player=`
-SzZzC	32630602	107.21×2
-[mogezi]	10483107	100
-Momoyaya	13859320	50
-Asatsuki Sakura	33407560	16.11
--aLIEz-	31372295	5
-`
-
-const Staff=`
-Konge	2053450	161.1
-Pata-Mon	6149313	161.1
-Akisa 18	16134378	161.1
-Aurora_fang	9887164	100
-[SHK]T_T	13999223	61.66
-Pain boy	24579916	16.11
-wyrio	8984146	16.11
-`
-</script>
+    <title>MP5赛群</title>
 
     <style>
 @font-face {
