--- a/live_poster/sheet.html
+++ b/live_poster/sheet.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>MP5直播端Bracket页面</title>
 <script type="text/javascript">
-url='https://docs.qq.com/sheet/DQ2ViTHFQYUR3TmtH?tab=cgbqhx'
+url='https://docs.qq.com/sheet/DQ096cUFYY0ZXSXVs?tab=z6zp1p'
 n=1
 stage =[
 'knockout',   // 0：淘汰赛（4+4）
